[gd_scene load_steps=3 format=3 uid="uid://bg0qlihrqay36"]

[ext_resource type="Script" path="res://nodes/ui.gd" id="1_2eed2"]
[ext_resource type="Texture2D" uid="uid://c5tcaeuiy5e5n" path="res://icon.svg" id="2_ga38c"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2eed2")

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -71.0
offset_right = -31.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(5, 5)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ga38c")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="TabContainer" type="TabContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="General" type="Panel" parent="ColorRect/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="QuitButton" type="Button" parent="ColorRect/TabContainer/General"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 134.0
offset_top = -99.0
offset_right = 176.0
offset_bottom = -68.0
grow_vertical = 0
text = "Quit
"

[node name="DefaultButton" type="Button" parent="ColorRect/TabContainer/General"]
layout_mode = 0
offset_left = 347.0
offset_top = 267.0
offset_right = 484.0
offset_bottom = 298.0
text = "Restore Defaults"

[node name="MSenseLabel" type="Label" parent="ColorRect/TabContainer/General"]
layout_mode = 0
offset_left = 95.0
offset_top = 52.0
offset_right = 230.0
offset_bottom = 75.0
text = "Mouse Sensitivity"

[node name="MSenseSlide" type="HSlider" parent="ColorRect/TabContainer/General"]
layout_mode = 0
offset_left = 316.0
offset_top = 58.0
offset_right = 475.0
offset_bottom = 74.0
value = 50.0

[node name="Video" type="Panel" parent="ColorRect/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Audio" type="Panel" parent="ColorRect/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Controls" type="Panel" parent="ColorRect/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[connection signal="pressed" from="ColorRect/TabContainer/General/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ColorRect/TabContainer/General/DefaultButton" to="." method="_on_default_button_pressed"]
[connection signal="value_changed" from="ColorRect/TabContainer/General/MSenseSlide" to="." method="_on_m_sense_slide_value_changed"]
